--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,21 @@
+# Core dependencies
 PyQt6>=6.5.0
 keyring>=24.0.0
 python-dotenv>=1.0.0
+
+# Email handling
+secure-smtplib>=0.1.1
+imapclient>=2.3.1
+python-dateutil>=2.8.2
+
+# Security
+cryptography>=41.0.0
+pyOpenSSL>=23.2.0
+
+# Development tools
+black>=23.7.0
+pylint>=2.17.5
+pytest>=7.4.0
+
+# Building
+pyinstaller>=5.13.0
